[package]
name = "sealable"
authors = ["hkau"]
license = "MIT"

version = "0.1.3"
edition = "2021"

[features]
postgres = ["pastemd/postgres"]
mysql = ["pastemd/mysql"]
sqlite = ["pastemd/sqlite"]
default = ["pastemd/sqlite"]

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
dorsal = "0.1.3-1"
dotenv = "0.15.0"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
# pastemd = { path = "../pastemd" }
pastemd = "0.1.3"
sauropod = "0.1.1"
