[package]
name = "sealable"
authors = ["hkau"]
license = "MIT"

version = "0.1.5"
edition = "2021"

[features]
postgres = ["pastemd/postgres", "pongo/sqlite"]
mysql = ["pastemd/mysql", "pongo/sqlite"]
sqlite = ["pastemd/sqlite", "pongo/sqlite"]
# default = ["pastemd/sqlite", "pongo/sqlite"]

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
dotenv = "0.15.0"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
# pastemd = { path = "../pastemd", default-features = false }
pastemd = { version = "0.3.1", default-features = false }
sauropod = "0.1.2"
axum-extra = { version = "0.9.3", features = ["cookie"] }
regex = "1.10.5"
# pongo = { path = "../pongo", default-features = false }
pongo = { version = "0.1.3", default-features = false }
